# treesitter-werk

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-werkfile.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_werkfile/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWerkfile/: werkfile.h
bindings/swift/TreeSitterWerkfileTests/: TreeSitterWerkfileTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: array.werk  copy.werk  dedup.werk  discard.werk  env.werk  filter.werk  flatten.werk  join.werk  map.werk  match_expr.werk  nested_patterns.werk  read.werk  split.werk  string_interp.werk  write.werk
