[package]
name = "tree-sitter-werkfile"
description = "todo"
version = "0.1.0"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "werkfile"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-werkfile"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
